feat: implement authentication with JWT, including login, logout, and token refresh functionality
- Added JWT generation and verification for access and refresh tokens.
- Implemented login API to authenticate users and return tokens.
- Created logout API to invalidate refresh tokens and clear cookies.
- Developed refresh token API to issue new access tokens.
- Integrated user authentication state management in Redux.
- Added AuthChecker component to verify user authentication on app load.
- Updated dashboard and login pages to handle authentication state.
- Enhanced user model in Prisma schema to store refresh tokens and last login time.
- Improved middleware to protect routes and handle token expiration.

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 # It can include prod(production), dev(development), stage(staging), local(localhost)
 ENV_NAME='local'
+DATABASE_URL="postgresql://Amirxone:Amirxone1379@localhost:2590/mydatabase?schema=public"
+NEXTAUTH_SECRET="your-super-secret-key-here-make-it-very-long-and-random"
+NEXTAUTH_URL="http://localhost:3000"
+JWT_SECRET="your-super-secret-jwt-key-min-32-chars"
+JWT_REFRESH_SECRET="your-super-secret-refresh-key-min-32-chars"
