--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.5.1",
+    "cookie": "^1.0.2",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
     "iconsax-reactjs": "^0.0.8",
     "jalali-moment": "^3.3.11",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "^15.2.4",
     "next-auth": "^4.24.13",
@@ -45,7 +47,9 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
