--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
     "@reduxjs/toolkit": "^2.5.1",
-    "axios": "^1.7.9",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.5.1",
+    "cheerio": "^1.1.2",
     "cookie": "^1.0.2",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
@@ -29,6 +30,7 @@
     "next": "^15.2.4",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "ogl": "^1.0.11",
     "prisma": "^6.19.0",
     "react": "^19.0.0",
@@ -47,6 +49,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cheerio": "^0.22.35",
     "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.10",
