--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,6 +55,9 @@
       ],
       "@/lib/*": [
         "./src/lib/*"
+      ],
+      "@/types/*": [
+        "./src/types/*"
       ]
     }
   },
